src/components/axes/css/style.css
:host {
  position: relative;
  display: inline-block;
  width: 100%;

  min-height: calc(128px + var(--y-axis-padding)) !important;

  &::part(grid) {
    color: lightblue;
    stroke-width: 1;
    opacity: 0.4;
  }

  &::part(tick) {
    color: black;
    stroke-width: 1;
  }
}

.axes-svg {
  position: absolute;
  width: 100%;
  height: 100%;
  overflow: visible;

  /*
    The axes lines will be hidden behind the spectrogram if we do not set
    z-index to one
  */
  z-index: 1;
}

.axes-labels {
  overflow: visible;
  height: 2em;
  width: 1em;
}

line {
  shape-rendering: crispEdges;
}

text {
  fill: var(--oe-font-color);
  stroke: none;
  font: 11px sans-serif;
}

g {
  stroke: currentColor;
}

